src/test/ui/const-generics/argument_order.min.stderr
error: type parameters must be declared prior to const parameters
  --> $DIR/argument_order.rs:5:28
   |
LL | struct Bad<const N: usize, T> {
   |           -----------------^- help: reorder the parameters: lifetimes, then types, then consts: `<T, const N: usize>`

error: lifetime parameters must be declared prior to const parameters
  --> $DIR/argument_order.rs:11:32
   |
LL | struct AlsoBad<const N: usize, 'a, T, 'b, const M: usize, U> {
   |               -----------------^^-----^^-------------------- help: reorder the parameters: lifetimes, then types, then consts: `<'a, 'b, T, U, const N: usize, const M: usize>`

error: type parameters must be declared prior to const parameters
  --> $DIR/argument_order.rs:11:36
   |
LL | struct AlsoBad<const N: usize, 'a, T, 'b, const M: usize, U> {
   |               ---------------------^----------------------^- help: reorder the parameters: lifetimes, then types, then consts: `<'a, 'b, T, U, const N: usize, const M: usize>`

error[E0747]: lifetime provided when a type was expected
  --> $DIR/argument_order.rs:19:23
   |
LL |     let _: AlsoBad<7, 'static, u32, 'static, 17, u16>;
   |                       ^^^^^^^
   |
   = note: lifetime arguments must be provided before type arguments
   = help: reorder the arguments: lifetimes, then types, then consts: `<'a, 'b, T, U, N, M>`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0747`.
